MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Periodo_Q__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Q__c</fullName>
    <description>Fecha prevista en formato Q</description>
    <formula>TEXT(YEAR( Fecha_Prevista__c ))
&amp;&quot; &quot;&amp; 
CASE(
    MONTH(Fecha_Prevista__c),
    1, &quot;Q1&quot;,
    2, &quot;Q1&quot;,
    3, &quot;Q1&quot;,
    4, &quot;Q2&quot;,
    5, &quot;Q2&quot;,
    6, &quot;Q2&quot;,
    7, &quot;Q3&quot;,
    8, &quot;Q3&quot;,
    9, &quot;Q3&quot;,
    10, &quot;Q4&quot;,
    11, &quot;Q4&quot;,
    12, &quot;Q4&quot;,
    &quot;Q&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo Q</label>
    <type>Text</type>
</CustomField>