MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/PeriodoM__c.field-meta.xml
<CustomField>
    <fullName>PeriodoM__c</fullName>
    <description>Periodo de fecha prevista</description>
    <formula>CASE(
MONTH( Fecha_Prevista__c ),
1, &quot;Ene.&quot;,
2, &quot;Feb.&quot;,
3, &quot;Mar.&quot;,
4, &quot;Abr.&quot;,
5, &quot;May.&quot;,
6, &quot;Jun.&quot;,
7, &quot;Jul.&quot;,
8, &quot;Ago.&quot;,
9, &quot;Sep.&quot;,
10, &quot;Oct.&quot;,
11, &quot;Nov.&quot;,
12, &quot;Dic.&quot;,
&quot;&quot;
) + TEXT(YEAR( Fecha_Prevista__c ))</formula>
    <label>Periodo</label>
    <type>Text</type>
</CustomField>