MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Posici_n_PV2__c.field-meta.xml
<CustomField>
    <fullName>Posici_n_PV2__c</fullName>
    <label>Posición PV2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>