MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Posicin_PV__c.field-meta.xml
<CustomField>
    <fullName>Posicin_PV__c</fullName>
    <label>Posición PV</label>
    <length>4</length>
    <type>Text</type>
</CustomField>