MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Precio2__c.field-meta.xml
<CustomField>
    <fullName>Precio2__c</fullName>
    <label>Precio2</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>