MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Precio_3__c.field-meta.xml
<CustomField>
    <fullName>Precio_3__c</fullName>
    <label>Precio 3</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>