MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <label>Precio</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>