MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <formula>Precio__c +  Precio2__c +  Precio_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>