MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Prov__c.field-meta.xml
<CustomField>
    <fullName>Prov__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisionado</label>
    <type>Checkbox</type>
</CustomField>