MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Proveedor_Seidor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_Seidor__c</fullName>
    <label>Proveedor Seidor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>