MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Rec__c.field-meta.xml
<CustomField>
    <fullName>Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconocido</label>
    <type>Checkbox</type>
</CustomField>