MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Rechazada__c.field-meta.xml
<CustomField>
    <fullName>Rechazada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechazada</label>
    <type>Checkbox</type>
</CustomField>