MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Reenviado_a_facturar_el__c.field-meta.xml
<CustomField>
    <fullName>Reenviado_a_facturar_el__c</fullName>
    <label>Reenviado a facturar el</label>
    <type>DateTime</type>
</CustomField>