MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Refac__c.field-meta.xml
<CustomField>
    <fullName>Refac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refacturado</label>
    <type>Checkbox</type>
</CustomField>