MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Reportado_a_Finanzas__c.field-meta.xml
<CustomField>
    <fullName>Reportado_a_Finanzas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reportado a Finanzas</label>
    <type>Checkbox</type>
</CustomField>