MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Reporte_de_Revision__c.field-meta.xml
<CustomField>
    <fullName>Reporte_de_Revision__c</fullName>
    <formula>Cliente__r.Reporte_de_Revision__c</formula>
    <label>Reporte de Revision</label>
    <type>Text</type>
</CustomField>