MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Reversa_Provision_Requerida__c.field-meta.xml
<CustomField>
    <fullName>Reversa_Provision_Requerida__c</fullName>
    <label>Reversa Provision Requerida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>