MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/RevP__c.field-meta.xml
<CustomField>
    <fullName>RevP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversa Provision</label>
    <type>Checkbox</type>
</CustomField>