MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Sado_del_mes__c.field-meta.xml
<CustomField>
    <fullName>Sado_del_mes__c</fullName>
    <formula>Base_Mensual__c  -   HH_Consumidas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de HH del mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>