MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servicios</valueSetName>
    </valueSet>
</CustomField>