MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <label>Tarifa</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>