MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Tasa_USD_a_CLP__c.field-meta.xml
<CustomField>
    <fullName>Tasa_USD_a_CLP__c</fullName>
    <label>Tasa USD a CLP</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>