MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Tipo_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contrato__c</fullName>
    <label>Tipo de Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Contrato</valueSetName>
    </valueSet>
</CustomField>