MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/TipoContratotxt__c.field-meta.xml
<CustomField>
    <fullName>TipoContratotxt__c</fullName>
    <formula>text( Tipo_de_Contrato__c )</formula>
    <label>TipoContratotxt</label>
    <type>Text</type>
</CustomField>