MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/TipoRegistroTxt__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistroTxt__c</fullName>
    <formula>RecordType.Name</formula>
    <label>TipoRegistroTxt</label>
    <type>Text</type>
</CustomField>