MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Total_reenvios__c.field-meta.xml
<CustomField>
    <fullName>Total_reenvios__c</fullName>
    <label>Total reenvios</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>