MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Total_renvios_cierre__c.field-meta.xml
<CustomField>
    <fullName>Total_renvios_cierre__c</fullName>
    <label>Total renvios cierre</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>