MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Ultimo_Error_Envio__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Error_Envio__c</fullName>
    <label>Ultimo Error Envio</label>
    <type>DateTime</type>
</CustomField>