MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Valor_en_CLP__c.field-meta.xml
<CustomField>
    <fullName>Valor_en_CLP__c</fullName>
    <formula>CASE( TipoRegistroTxt__c ,
&apos;Factura Cliente&apos;,  Valor_en_CLP_Absoluto__c *1 ,
&apos;Pago Proveedores&apos;,  Valor_en_CLP_Absoluto__c *-1 ,
&apos;Egreso&apos;,  Valor_en_CLP_Absoluto__c *-1 ,
&apos;Ingreso&apos;,  Valor_en_CLP_Absoluto__c *1 ,


0 )</formula>
    <label>Valor en CLP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>