MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Valor_en_CLP_Absoluto__c.field-meta.xml
<CustomField>
    <fullName>Valor_en_CLP_Absoluto__c</fullName>
    <formula>CASE( Moneda_Txt__c , 
&apos;UF&apos;,  Precio__c  *  Tasa_UF_CLP__c , 
&apos;USD&apos;,  Precio__c  *   Tasa_USD_a_CLP__c  , 
Precio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor en CLP Absoluto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>