MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Vigencia_de_Provision__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_de_Provision__c</fullName>
    <formula>Ingresado_a_Provision_el__c + 90</formula>
    <label>Vigencia Provisión hasta</label>
    <type>Date</type>
</CustomField>