MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/recordTypes/Cierre_Mensual.recordType-meta.xml
<RecordType>
    <fullName>Cierre_Mensual</fullName>
    <active>true</active>
    <label>Cierre Mensual</label>
</RecordType>