MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/recordTypes/Egreso.recordType-meta.xml
<RecordType>
    <fullName>Egreso</fullName>
    <active>true</active>
    <label>Egreso</label>
</RecordType>