MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/recordTypes/Factura_Cliente.recordType-meta.xml
<RecordType>
    <fullName>Factura_Cliente</fullName>
    <active>true</active>
    <label>Factura Cliente</label>
</RecordType>