MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/recordTypes/Ingreso.recordType-meta.xml
<RecordType>
    <fullName>Ingreso</fullName>
    <active>true</active>
    <label>Ingreso</label>
</RecordType>