MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/recordTypes/Pago_Proveedores.recordType-meta.xml
<RecordType>
    <fullName>Pago_Proveedores</fullName>
    <active>true</active>
    <label>Pago Proveedores</label>
</RecordType>