MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Cierre_sin_Base.validationRule-meta.xml
<ValidationRule>
    <fullName>Cierre_sin_Base</fullName>
    <active>false</active>
    <description>Evita cerrar un mes sin la base</description>
    <errorConditionFormula>AND( TipoRegistroTxt__c = &apos;Cierre Mensual&apos;,   ISBLANK(Base_Mensual__c ))</errorConditionFormula>
    <errorMessage>No puede cerrar el mes sin la base mensual</errorMessage>
</ValidationRule>