MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Cierre_sin_Consumo.validationRule-meta.xml
<ValidationRule>
    <fullName>Cierre_sin_Consumo</fullName>
    <active>false</active>
    <description>Evita cerrar un mes sin el consumo</description>
    <errorConditionFormula>AND( TipoRegistroTxt__c = &apos;Cierre Mensual&apos;,   ISBLANK( Consumo_Mensual__c ))</errorConditionFormula>
    <errorMessage>No puede cerrar el mes sin el consumo mensual</errorMessage>
</ValidationRule>