MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Culminado_con_necesidad_reversa.validationRule-meta.xml
<ValidationRule>
    <fullName>Culminado_con_necesidad_reversa</fullName>
    <active>true</active>
    <errorConditionFormula>and( ISPICKVAL(Estatus_Facturacion__c,&apos;Culminado&apos;), ISPICKVAL(Reversa_Provision_Requerida__c,&apos;SI&apos;), RevP__c = FALSE )</errorConditionFormula>
    <errorMessage>Factura necesita ser reversada de provisión, por favor confirme que ha sido reversada en la casilla Reversa Provisión para poder culminar el ciclo</errorMessage>
</ValidationRule>