MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Envio_a_facturar_sin_fecha.validationRule-meta.xml
<ValidationRule>
    <fullName>Envio_a_facturar_sin_fecha</fullName>
    <active>true</active>
    <errorConditionFormula>and( ISPICKVAL(Estatus_Facturacion__c,&apos;Enviado a Facturar&apos;),   ISBLANK(Fecha_Facturacin__c ))</errorConditionFormula>
    <errorMessage>Debe indicar una fecha de facturacion.</errorMessage>
</ValidationRule>