MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Facturado_sin_Folio.validationRule-meta.xml
<ValidationRule>
    <fullName>Facturado_sin_Folio</fullName>
    <active>true</active>
    <errorConditionFormula>and( ISPICKVAL(Estatus_Facturacion__c,&apos;Facturado&apos;),   ISBLANK( Folio__c  ))</errorConditionFormula>
    <errorMessage>Por favor completar numero de folio antes de pasar a estatus Facturado</errorMessage>
</ValidationRule>