MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Facturado_sin_verificar_reversa.validationRule-meta.xml
<ValidationRule>
    <fullName>Facturado_sin_verificar_reversa</fullName>
    <active>true</active>
    <errorConditionFormula>and( ISPICKVAL(Estatus_Facturacion__c,&apos;Facturado&apos;),   ISBLANK(text(Reversa_Provision_Requerida__c )))</errorConditionFormula>
    <errorMessage>Debe indicar si aplica o no reversa de provisión</errorMessage>
</ValidationRule>