MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Reversar_Provision2.validationRule-meta.xml
<ValidationRule>
    <fullName>Reversar_Provision2</fullName>
    <active>false</active>
    <description>Regla que condiciona que para poder Reversar una provisión debe tener folio</description>
    <errorConditionFormula>ISBLANK( Folio__c )</errorConditionFormula>
    <errorMessage>No puede reversar una Provisión sin Folio / Factura</errorMessage>
</ValidationRule>