MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V1_Cliente_Seidor.validationRule-meta.xml
<ValidationRule>
    <fullName>V1_Cliente_Seidor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
  ISBLANK(Cliente_seidor__c)
)</errorConditionFormula>
    <errorDisplayField>Cliente_seidor__c</errorDisplayField>
    <errorMessage>No existe cliente Seidor registrado</errorMessage>
</ValidationRule>