MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V2_PrecioTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_PrecioTotal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
    OR(
    ISBLANK(Precio_Total__c),
    Precio_Total__c &lt;= 0
  )
)</errorConditionFormula>
    <errorMessage>Precio es 0</errorMessage>
</ValidationRule>