MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V3_Moneda.validationRule-meta.xml
<ValidationRule>
    <fullName>V3_Moneda</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
  ISBLANK(TEXT(Moneda__c))
  )</errorConditionFormula>
    <errorDisplayField>Moneda__c</errorDisplayField>
    <errorMessage>Falta la Moneda</errorMessage>
</ValidationRule>