MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V4_OrganizacionVenta.validationRule-meta.xml
<ValidationRule>
    <fullName>V4_OrganizacionVenta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
   ISBLANK(OrgVenta__c)
)</errorConditionFormula>
    <errorDisplayField>OrgVenta__c</errorDisplayField>
    <errorMessage>Falta Org. Venta</errorMessage>
</ValidationRule>