MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V5_Fecha_facturacion.validationRule-meta.xml
<ValidationRule>
    <fullName>V5_Fecha_facturacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
ISBLANK(Fecha_Facturacin__c)
)</errorConditionFormula>
    <errorDisplayField>Fecha_Facturacin__c</errorDisplayField>
    <errorMessage>Falta la Fecha de Facturación</errorMessage>
</ValidationRule>