MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V6_HES.validationRule-meta.xml
<ValidationRule>
    <fullName>V6_HES</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
ISBLANK(HES__c)
)</errorConditionFormula>
    <errorDisplayField>HES__c</errorDisplayField>
    <errorMessage>Falta la HES</errorMessage>
</ValidationRule>