MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V6_OCCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>V6_OCCliente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
ISBLANK(OC_Cliente__c)
)</errorConditionFormula>
    <errorDisplayField>OC_Cliente__c</errorDisplayField>
    <errorMessage>Falta la OC Cliente</errorMessage>
</ValidationRule>