MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V7_ListaFacturacion.validationRule-meta.xml
<ValidationRule>
    <fullName>V7_ListaFacturacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
    ISBLANK( Lista_de_correo_Facturacion__c ))</errorConditionFormula>
    <errorDisplayField>Lista_de_correo_Facturacion__c</errorDisplayField>
    <errorMessage>Falta la Lista de facturacón</errorMessage>
</ValidationRule>