MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/V8_ListaProvisiones.validationRule-meta.xml
<ValidationRule>
    <fullName>V8_ListaProvisiones</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
    ISBLANK(  Lista_de_correo_Provisiones__c ))</errorConditionFormula>
    <errorDisplayField>Lista_de_correo_Provisiones__c</errorDisplayField>
    <errorMessage>Falta la Lista de correo para provisiones</errorMessage>
</ValidationRule>