MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/Validador_Tasa_UF.validationRule-meta.xml
<ValidationRule>
    <fullName>Validador_Tasa_UF</fullName>
    <active>false</active>
    <description>Valida que los campos Tasa UF y Moneda UF deben estar con datos</description>
    <errorConditionFormula>AND(Moneda_Txt__c = &apos;UF&apos;, ISBLANK( Tasa_UF_CLP__c ))</errorConditionFormula>
    <errorMessage>Se debe registrar una tasa UF a CLP dado que el registro esta siendo generado en UF.</errorMessage>
</ValidationRule>