MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/VP1_Posicion1.validationRule-meta.xml
<ValidationRule>
    <fullName>VP1_Posicion1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
VALUE(TEXT(Numero_de_Posiciones__c)) &gt;= 1,
  OR(
    ISBLANK(Precio__c), Precio__c &lt;= 0,
    ISBLANK(Materia__c),
    ISBLANK(Division__c),
    ISBLANK(DenPosicin__c),
    ISBLANK(Pedido_V__c),
    ISBLANK(Posicin_PV__c),
    ISBLANK(PEP__c) /* porque en el mail usas PEP__r.Name */
  )
)</errorConditionFormula>
    <errorMessage>Completa todos los campos de la Posición 1 (Precio&gt;0, Material, División, Denominación, Pedido, Pos. PV, PEP).”</errorMessage>
</ValidationRule>