MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/VP2_Posicion2.validationRule-meta.xml
<ValidationRule>
    <fullName>VP2_Posicion2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
  VALUE(TEXT(Numero_de_Posiciones__c)) &gt;= 2,
  OR(
    ISBLANK(Precio2__c), Precio2__c &lt;= 0,
    ISBLANK(Materia2__c),
    ISBLANK(Division2__c),
    ISBLANK(DenPosicin2__c),
    ISBLANK(Pedido_V2__c),
    ISBLANK(Posici_n_PV2__c),
    ISBLANK(PEP2__c)
  )
)</errorConditionFormula>
    <errorMessage>Completa todos los campos de la Posición 2 (Precio&gt;0, Material, División, Denominación, Pedido, Pos. PV, PEP).”</errorMessage>
</ValidationRule>