MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/VP3_Posicion3.validationRule-meta.xml
<ValidationRule>
    <fullName>VP3_Posicion3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Enviado a Facturar&quot;),
  VALUE(TEXT(Numero_de_Posiciones__c)) &gt;= 3,
  OR(
    ISBLANK(Precio_3__c), Precio_3__c &lt;= 0,
    ISBLANK(Materia3__c),
    ISBLANK(Division3__c),
    ISBLANK(DenPosicin3__c),
    ISBLANK(Pedido_V3__c),
    ISBLANK(Posici_n_PV3__c),
    ISBLANK(PEP3__c)
  )
)</errorConditionFormula>
    <errorMessage>Completa todos los campos de la Posición 3 (Precio&gt;0, Material, División, Denominación, Pedido, Pos. PV, PEP).”</errorMessage>
</ValidationRule>