MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/VR01_Reversa_dentro_mismo_periodo.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Reversa_dentro_mismo_periodo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Estatus_Facturacion__c , &quot;Solicitud de reversa&quot;),
  NOT( ISBLANK( Fecha_Prevista__c ) ),
  YEAR(TODAY()) = YEAR( Fecha_Prevista__c ),
  MONTH(TODAY()) = MONTH( Fecha_Prevista__c )
)</errorConditionFormula>
    <errorMessage>No puedes enviar a &quot;Solicitud de reversa&quot; dentro del mismo mes de la Fecha Prevista.</errorMessage>
</ValidationRule>