MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/validationRules/VR01_Reversa_sin_indicador_de_reversa.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Reversa_sin_indicador_de_reversa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Estatus_Facturacion__c , &quot;Solicitud de Reversa&quot;),
  OR(
    ISPICKVAL(Reversa_Provision_Requerida__c , &quot;NO&quot;),
    ISBLANK(TEXT(Reversa_Provision_Requerida__c))
  )
)</errorConditionFormula>
    <errorDisplayField>Reversa_Provision_Requerida__c</errorDisplayField>
    <errorMessage>No puede pasar a reversa de provisión sin haber indicado que lo necesita</errorMessage>
</ValidationRule>