MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>DenPosicin__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fecha_Prevista__c</columns>
    <columns>Fecha_Provision__c</columns>
    <columns>Fecha_Reversa__c</columns>
    <columns>Division__c</columns>
    <columns>Folio__c</columns>
    <columns>OrgVenta__c</columns>
    <columns>Pedido_V__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Gestión Cierre</label>
</ListView>