MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/listViews/General.listView-meta.xml
<ListView>
    <fullName>General</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>DenPosicin__c</columns>
    <columns>Moneda__c</columns>
    <columns>Precio__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>DenPosicin__c</field>
        <operation>contains</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Gestion_Comercial__c.Cierre_Mensual</value>
    </filters>
    <filters>
        <field>Cliente__c</field>
        <operation>equals</operation>
        <value>Universidad de los Andes</value>
    </filters>
    <label>General</label>
    <sharedTo>
        <group>Gcia_Servicios_AMS</group>
    </sharedTo>
</ListView>